--- a/styles.css
+++ b/styles.css
@@ -809,7 +809,8 @@
 /* Bottom Section Styles */
 .bottom-section {
     width: 100%;
-    min-height: 300px;
+    /* Prev 300 */
+    min-height: 350px;
     background-color: #5f9ea0;
     padding: 30px 0;
     margin-top: 0;
@@ -827,7 +828,8 @@
 .bottom-right {
     flex: 1;
     color: white;
-    max-height: 350px;
+    /* Prev 350 */
+    max-height: 400px;
     overflow-y: auto;
 }
 
